<resources>
    <string name="app_name">My Application</string>
    <string name="soft_name">Единый государственный  удостоверяющий центр ФНС</string>
    <string name="logo">logo</string>
    <string name="auth">Авторизация</string>
    <string name="auth_icon">Auth</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="Join">Войти</string>
    <string name="cannot_account">У вас нет аккаунта?</string>
    <string name="join_us">Зарегистрироваться!</string>
    <string name="title">Единый государственный удостоверяющий центр ФНС</string>
    <string name="menu">menu</string>
    <string name="register">Регистрация</string>
</resources>
