<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:background="@drawable/shadowed_bottom"

    android:gravity="center|center_vertical"
    android:orientation="horizontal"
    tools:ignore="RtlHardcoded">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="0.2"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="0.75"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="15dp"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="0.1"
        android:background="#00FFFFFF"
        android:contentDescription="@string/menu"
        android:scaleType="centerInside"
        android:src="@drawable/menu"
        android:tint="#CCC0BBBB"
        tools:src="@drawable/menu" />
</LinearLayout>
