<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fnscrypto.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="126dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="66dp"
        android:text="@string/soft_name"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#F1622D"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/back_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/radius_panel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="90dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:paddingStart="40dp"
                    android:paddingEnd="56dp"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="6dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:contentDescription="@string/auth_icon"
                        app:srcCompat="@drawable/login" />

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:background="@drawable/input_field"
                        android:ems="10"
                        android:hint="@string/login"
                        android:inputType="textPersonName"
                        android:paddingStart="4dp"
                        android:textSize="16sp"
                        tools:targetApi="o"
                        tools:ignore="RtlSymmetry" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:paddingStart="40dp"
                    android:paddingEnd="56dp"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="6dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:contentDescription="@string/auth_icon"
                        app:srcCompat="@drawable/key" />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:autofillHints=""
                        android:background="@drawable/input_field"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="4dp"
                        android:textSize="16sp"
                        tools:ignore="RtlSymmetry"
                        tools:targetApi="o" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:paddingStart="108dp"
                    android:paddingEnd="108dp"
                    tools:ignore="UselessParent">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/orange_button"
                        android:text="@string/Join" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/cannot_account"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvRegistration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/join_us"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginTop="20dp"
        android:background="#00223B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.43" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
